# pulseqt

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SignalDataFlow.md  reasonix.toml
.github/workflows/: build.yml
.reasonix/truncated-results/: 1780094060274-b112ef36-run_command.txt
doc/: 01_需求规格说明.md  02_架构设计.md  03_通信协议设计.md  04_开发计划与日报.md  05_磁场相位分析_需求规格.md  06_磁场相位分析_架构设计.md  07_磁场相位分析_开发计划.md  08_相位差示波_核心实现.md  09_新项目_数据规格与设计.md
docs/: BugFix-架构整合与断开修复.md  Heartbeat-心跳机制原理与实现.md  IntegrationTest-集成测试设计方法与实施.md  QtMultithreading-Qt多线程开发.md  QtTest-单元测试设计方法与实施.md  T012-FullIntegration-Pipeline.md  T016-CSVExport-CSV导出.md  Testing-测试体系建设总结与Bug发掘.md
include/: ChannelManager.h  ChannelRegistry.h  ConnectionDialog.h  DataBuffer.h  DataPoint.h  DataTableModel.h  DatabaseManager.h  DollarParser.h  ExportDialog.h  FftProcessor.h  Frame.h  HistoryPlayer.h  IChannel.h  Logger.h  MagCollectorDecoder.h  MagCollectorFrame.h  MagDataBuffer.h  MagDataPoint.h  MagFormula.h  MagMainWindow.h  MainWindow.h  ModbusCRC.h  ModbusDecoder.h  ModbusMaster.h  ParseWorker.h  ProtocolDecoder.h  RealTimeChart.h  SerialChannel.h  SerialWorker.h  TcpChannel.h  TcpWorker.h
src/: main.cpp
src/communication/: ChannelManager.cpp  ChannelRegistry.cpp  SerialChannel.cpp  TcpChannel.cpp
src/data/: DataBuffer.cpp  DataTableModel.cpp  DatabaseManager.cpp  MagDataBuffer.cpp
src/fft/: FftProcessor.cpp  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fft_log.h  kiss_fftr.c  kiss_fftr.h
src/protocol/: DollarParser.cpp  MagCollectorDecoder.cpp  ModbusDecoder.cpp  ModbusMaster.cpp  ProtocolDecoder.cpp
src/ui/: ConnectionDialog.cpp  ExportDialog.cpp  HistoryPlayer.cpp  MagMainWindow.cpp  MainWindow.cpp  RealTimeChart.cpp
src/utils/: Logger.cpp
src/worker/: ParseWorker.cpp  SerialWorker.cpp  TcpWorker.cpp
tests/: TestChannelManager.cpp  TestChannelRegistry.cpp  TestDataBuffer.cpp  TestDatabaseManager.cpp  TestDollarParser.cpp  TestFftProcessor.cpp  TestFrame.cpp  TestIntegration.cpp  TestMagCollectorDecoder.cpp  TestParseWorker.cpp  TestProtocolDecoder.cpp
tools/: dollar_serial_simulator.py  generate_imu_csv.py  mag_collector_simulator.py  modbus_simulator.py  package_linux.sh  protocol_fuzzer.py  replay_imu.py  serial_test_server.py  serial_wave_simulator.py  tcp_data_simulator.py  tcp_test_server.py  tcp_wave_simulator.py
